--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="/css/styles.css" rel="stylesheet">
     <title>Philopatear Abdelmaseh</title>
+    <link href="/favicon.ico" rel="icon">
 </head>
 <body>
 <div>
