edit styles.css file v00008 and index.html v00003

--- a/html/index.html
+++ b/html/index.html
@@ -11,5 +11,11 @@
     <h1>I'm Philopatear Abdelmaseh</h1>
     <p>Software engineer</p>
 </div>
+<div class="middle-container">
+
+</div>
+<div class="bottom-container">
+
+</div>
 </body>
 </html>
