--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <title>Philopatear Abdelmaseh</title>
 </head>
 <body>
-<div>
+<div class="name">
     <h1>I'm Philopatear Abdelmaseh</h1>
     <p>Software engineer</p>
 </div>
