edit index.html file v00005

--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 <div class="top-container">
+    <img src="/images/mountain.png" alt="mountain image">
     <h1>I'm Philopatear Abdelmaseh</h1>
     <p>Software engineer</p>
+    <img src="/images/cloud.png" alt="cloud photo">
 </div>
 <div class="middle-container">
 
