--- a/html/index.html
+++ b/html/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 <div class="top-container">
-    <img src="/images/mountain.png" alt="mountain image">
+    <img src="/images/cloud.png" alt="cloud photo">
     <h1>I'm Philopatear Abdelmaseh</h1>
     <p>Software engineer</p>
     <img src="/images/cloud.png" alt="cloud photo">
+    <img src="/images/mountain.png" alt="mountain photo">
 </div>
 <div class="middle-container">
 
