--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 <div class="top-container">
     <img src="/images/cloud.png" alt="cloud photo">
     <h1>I'm Philopatear Abdelmaseh</h1>
-    <p>Software engineer</p>
+    <p><span class="soft">Soft</span>ware engineer</p>
     <img src="/images/cloud.png" alt="cloud photo">
     <img src="/images/mountain.png" alt="mountain photo">
 </div>
