--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="top-container">
     <img src="/images/cloud.png" alt="cloud photo">
-    <h1>I'm Philopatear Abdelmaseh</h1>
+    <h1>I'm Philopatear.</h1>
     <p><span class="soft">Soft</span>ware engineer</p>
     <img src="/images/cloud.png" alt="cloud photo">
     <img src="/images/mountain.png" alt="mountain photo">
