--- a/html/index.html
+++ b/html/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 <div class="top-container">
-    <img src="/images/cloud.png" alt="cloud photo">
+    <img class="top-cloud" src="/images/cloud.png" alt="cloud photo">
     <h1>I'm Philopatear.</h1>
     <p><span class="soft">Soft</span>ware engineer</p>
-    <img src="/images/cloud.png" alt="cloud photo">
-    <img src="/images/mountain.png" alt="mountain photo">
+    <img class="bottom-cloud" src="/images/cloud.png" alt="cloud photo">
+    <img class="bottom-montain" src="/images/mountain.png" alt="mountain photo">
 </div>
 <div class="middle-container">
 
