edit styles.css file v00013 and index.html file v00010

--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
     <p><span class="soft">Soft</span>ware engineer</p>
     <img class="bottom-cloud" src="/images/cloud.png" alt="cloud photo">
     <img class="bottom-montain" src="/images/mountain.png" alt="mountain photo">
+    <img class="behind-cloud" src="/images/cloud.png" alt="cloud photo">
 </div>
 <div class="middle-container">
 
