edit index.html v00013

--- a/html/index.html
+++ b/html/index.html
@@ -1,19 +1,22 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link href="/css/styles.css" rel="stylesheet">
-    <link href="/favicon.ico" rel="icon">
-    <title>Philopatear Abdelmaseh</title>
+	<meta charset="UTF-8">
+	<link href="/css/styles.css" rel="stylesheet">
+	<link href="/favicon.ico" rel="icon">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Unbounded&display=swap" rel="stylesheet">
+	<title>Philopatear Abdelmaseh</title>
 </head>
 <body>
 <div class="top-container">
-    <img class="top-cloud" src="/images/cloud.png" alt="cloud photo">
-    <h1>I'm Philopatear.</h1>
-    <p><span class="soft">Soft</span>ware engineer</p>
-    <img class="bottom-cloud" src="/images/cloud.png" alt="cloud photo">
-    <img class="bottom-montain" src="/images/mountain.png" alt="mountain photo">
-    <img class="behind-cloud" src="/images/cloud.png" alt="cloud photo">
+	<img class="top-cloud" src="/images/cloud.png" alt="cloud photo">
+	<h1>I'm Philopatear.</h1>
+	<p><span class="soft">Soft</span>ware engineer</p>
+	<img class="bottom-cloud" src="/images/cloud.png" alt="cloud photo">
+	<img class="bottom-montain" src="/images/mountain.png" alt="mountain photo">
+	<img class="behind-cloud" src="/images/cloud.png" alt="cloud photo">
 </div>
 <div class="middle-container">
 
