--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
 </div>
 <div class="middle-container">
 	<div class="profile">
-		<img src="" alt="">
+		<img src="https://pbs.twimg.com/profile_images/1618620816186384385/yO0Xz7nm_400x400.jpg" alt="philopatear photo">
 		<h2>Hello.</h2>
 		<p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
 	</div>
