--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 <div class="top-container">
 	<img class="top-cloud" src="/images/cloud.png" alt="cloud photo">
 	<h1>I'm Philopatear.</h1>
-	<p><span class="soft">Soft</span>ware engineer</p>
+	<p class="software-engineer"><span class="software">Software</span> engineer</p>
 	<img class="bottom-cloud" src="/images/cloud.png" alt="cloud photo">
 	<img class="bottom-montain" src="/images/mountain.png" alt="mountain photo">
 	<img class="behind-cloud" src="/images/cloud.png" alt="cloud photo">
