edit index.html file v00018

--- a/html/index.html
+++ b/html/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
 <div class="top-container">
-	<img class="top-cloud" src="/images/cloud.png" alt="cloud photo">
-	<h1>I'm Philopatear.</h1>
-	<p class="software-engineer"><span class="software">Software</span> engineer</p>
-	<img class="bottom-cloud" src="/images/cloud.png" alt="cloud photo">
-	<img class="bottom-montain" src="/images/mountain.png" alt="mountain photo">
-	<img class="behind-cloud" src="/images/cloud.png" alt="cloud photo">
+<!--	<img class="top-cloud" src="/images/cloud.png" alt="cloud photo">-->
+	<h1 class="i'm-philopatear">I'm Philopatear.</h1>
+	<p class="software-engineer"><span class="software">SOFTWARE</span> ENGINEER</p>
+<!--	<img class="bottom-cloud" src="/images/cloud.png" alt="cloud photo">-->
+<!--	<img class="bottom-montain" src="/images/mountain.png" alt="mountain photo">-->
+<!--	<img class="behind-cloud" src="/images/cloud.png" alt="cloud photo">-->
 </div>
 <div class="middle-container">
 	<div class="profile">
