--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 <div class="top-container">
 <!--	<img class="top-cloud" src="/images/cloud.png" alt="cloud photo">-->
 	<h1 class="i'm-philopatear">I'm Philopatear.</h1>
-	<p class="software-engineer"><span class="software">SOFTWARE</span> ENGINEER</p>
+	<p class="a-software-engineer">A SOFTWARE ENGINEER</p>
 <!--	<img class="bottom-cloud" src="/images/cloud.png" alt="cloud photo">-->
 <!--	<img class="bottom-montain" src="/images/mountain.png" alt="mountain photo">-->
 <!--	<img class="behind-cloud" src="/images/cloud.png" alt="cloud photo">-->
