--- a/html/index.html
+++ b/html/index.html
@@ -21,22 +21,25 @@
 <div class="middle-container">
 	<div class="profile">
 		<img src="https://pbs.twimg.com/profile_images/1618620816186384385/yO0Xz7nm_400x400.jpg" alt="philopatear photo">
-		<h2>Hello.</h2>
-		<p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+		<h2>Hello,</h2>
+		<p>I'm Philopatear Abdelmaseh. A <span>Software Engineering</span> Student at Holberton School.<br>And a
+			<span>Mechatronics Engineering</span> Student at Alexandria Higher Institute of Engineering and Technology.
+		</p>
 	</div>
 	<hr>
 	<div class="skills">
 		<h2>My Skills.</h2>
-		<div class="skill-row">
-			<img class="" src="" alt="">
-			<h3>Lorem & Ipsum</h3>
-			<p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
-		</div>
-		<div class="skill-row">
-			<img class="" src="" alt="">
-			<h3>Lorem Ipsum Dolor</h3>
-			<p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
-		</div>
+		<p>C C++ python HTML5 CSS Bootstrap JavaScript </p>
+<!--		<div class="skill-row">-->
+<!--			<img class="" src="" alt="">-->
+<!--			<h3>Lorem & Ipsum</h3>-->
+<!--			<p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>-->
+<!--		</div>-->
+<!--		<div class="skill-row">-->
+<!--			<img class="" src="" alt="">-->
+<!--			<h3>Lorem Ipsum Dolor</h3>-->
+<!--			<p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>-->
+<!--		</div>-->
 	</div>
 	<hr>
 	<div class="contact-me">
