edit index.html file v00021

--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
 	<hr>
 	<div class="skills">
 		<h2>My Skills.</h2>
-		<p>C C++ python HTML5 CSS Bootstrap JavaScript </p>
+		<p>C/C++ python HTML5 CSS Bootstrap JavaScript Express.js Node.js Next.js json jquery MySQL UI/UX Git/GitHub</p>
 <!--		<div class="skill-row">-->
 <!--			<img class="" src="" alt="">-->
 <!--			<h3>Lorem & Ipsum</h3>-->
@@ -44,8 +44,8 @@
 	<hr>
 	<div class="contact-me">
 		<h2>Get In Touch</h2>
-		<h3>Lorem ipsum dolor sit amet, non elit.</h3>
-		<p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+<!--		<h3>Lorem ipsum dolor sit amet, non elit.</h3>-->
+		<p>Just feel free to send me an email.</p>
 		<a class="btn" href="mailto:name@email.com">CONTACT ME</a>
 	</div>
 </div>
