--- a/html/index.html
+++ b/html/index.html
@@ -50,9 +50,9 @@
 	</div>
 </div>
 <div class="bottom-container">
-	<a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-	<a class="footer-link" href="https://twitter.com/">Twitter</a>
-	<a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+	<a class="social-link" href="https://www.linkedin.com/">LinkedIn</a>
+	<a class="social-link" href="https://twitter.com/">Twitter</a>
+	<a class="social-link" href="https://www.appbrewery.co/">Website</a>
 	<p>© Philopatear Abdelfady</p>
 </div>
 </body>
