edit index.html file v00023

--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
 		<h2>Get In Touch</h2>
 <!--		<h3>Lorem ipsum dolor sit amet, non elit.</h3>-->
 		<p>Just feel free to send me an email.</p>
-		<a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+		<a class="mail" href="mailto:name@email.com">CONTACT ME</a>
 	</div>
 </div>
 <div class="bottom-container">
