--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,7 @@
 	<a class="social-link" href="https://www.linkedin.com/">LinkedIn</a>
 	<a class="social-link" href="https://twitter.com/">Twitter</a>
 	<a class="social-link" href="https://www.appbrewery.co/">Website</a>
-	<p>© Philopatear Abdelfady</p>
+	<p><span>©</span> Philopatear Abdelfady</p>
 </div>
 </body>
 </html>
