edit index.html file v00025

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="top-container">
 <!--	<img class="top-cloud" src="/images/cloud.png" alt="cloud photo">-->
-	<h1 class="i'm-philopatear">I'm Philopatear.</h1>
+	<h1 class="i'm-philopatear">I'm <span class="philo">Philo</span>patear.</h1>
 	<p class="a-software-engineer">A SOFTWARE ENGINEER</p>
 <!--	<img class="bottom-cloud" src="/images/cloud.png" alt="cloud photo">-->
 <!--	<img class="bottom-montain" src="/images/mountain.png" alt="mountain photo">-->
