--- a/html/index.html
+++ b/html/index.html
@@ -12,8 +12,8 @@
 <body>
 <div class="top-container">
 <!--	<img class="top-cloud" src="/images/cloud.png" alt="cloud photo">-->
-	<h1 class="i'm-philopatear">I'm <span class="philo">Philo</span>patear.</h1>
-	<p class="a-software-engineer">A SOFTWARE ENGINEER</p>
+	<h1 class="i'm-philopatear">I<span class="philo">'</span>m <span class="philo">Philo</span>patear<span class="philo">.</span></h1>
+	<p class="a-software-engineer">A <span class="philo">SOFTWARE ENGINEER</span></p>
 <!--	<img class="bottom-cloud" src="/images/cloud.png" alt="cloud photo">-->
 <!--	<img class="bottom-montain" src="/images/mountain.png" alt="mountain photo">-->
 <!--	<img class="behind-cloud" src="/images/cloud.png" alt="cloud photo">-->
