--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
 	<hr>
 	<div class="skills">
 		<h2>My Skills.</h2>
-		<p>C/C++ python HTML5 CSS Bootstrap JavaScript Express.js Node.js Next.js json jquery MySQL UI/UX Git/GitHub</p>
+		<p class="skills-paragraph">C/C++ python HTML5 CSS Bootstrap JavaScript Express.js Node.js Next.js json jquery MySQL UI/UX Git/GitHub</p>
 <!--		<div class="skill-row">-->
 <!--			<img class="" src="" alt="">-->
 <!--			<h3>Lorem & Ipsum</h3>-->
