--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
 </div>
 <div class="middle-container">
 	<div class="profile">
-		<img src="https://pbs.twimg.com/profile_images/1618620816186384385/yO0Xz7nm_400x400.jpg" alt="philopatear photo">
+		<img class="philo-photo" src="https://pbs.twimg.com/profile_images/1618620816186384385/yO0Xz7nm_400x400.jpg" alt="philopatear photo">
 		<h2>Hello,</h2>
 		<p>I'm Philopatear Abdelmaseh. A <span>Software Engineering</span> Student at Holberton School.<br>And a
 			<span>Mechatronics Engineering</span> Student at Alexandria Higher Institute of Engineering and Technology.
@@ -47,13 +47,17 @@
 <!--		<h3>Lorem ipsum dolor sit amet, non elit.</h3>-->
 		<p>Just feel free to send me an email.</p>
 		<a class="mail" href="mailto:name@email.com">CONTACT ME</a>
+		<a class="social-link" href="https://www.linkedin.com/">LinkedIn</a>
+		<a class="social-link" href="https://twitter.com/">Twitter</a>
+		<a class="social-link" href="https://www.appbrewery.co/">Website</a>
+		<p><span>©</span> Philopatear Abdelfady</p>
 	</div>
 </div>
-<div class="bottom-container">
-	<a class="social-link" href="https://www.linkedin.com/">LinkedIn</a>
-	<a class="social-link" href="https://twitter.com/">Twitter</a>
-	<a class="social-link" href="https://www.appbrewery.co/">Website</a>
-	<p><span>©</span> Philopatear Abdelfady</p>
-</div>
+<!--<div class="bottom-container">-->
+<!--	<a class="social-link" href="https://www.linkedin.com/">LinkedIn</a>-->
+<!--	<a class="social-link" href="https://twitter.com/">Twitter</a>-->
+<!--	<a class="social-link" href="https://www.appbrewery.co/">Website</a>-->
+<!--	<p><span>©</span> Philopatear Abdelfady</p>-->
+<!--</div>-->
 </body>
 </html>
