--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
 	</div>
 	<hr>
 	<div class="skills">
-		<h2>My Skills.</h2>
+		<h2>My Skills</h2>
 		<p class="skills-paragraph">C/C++ python HTML5 CSS Bootstrap JavaScript Express.js Node.js Next.js json jquery MySQL UI/UX Git/GitHub</p>
 <!--		<div class="skill-row">-->
 <!--			<img class="" src="" alt="">-->
