edit index.html file v00031

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
 <div class="middle-container">
 	<div class="profile">
 		<img class="philo-photo" src="https://pbs.twimg.com/profile_images/1618620816186384385/yO0Xz7nm_400x400.jpg" alt="philopatear photo">
-		<h2>Hello,</h2>
+		<h2>Hello</h2>
 		<p>I'm Philopatear Abdelmaseh. A <span>Software Engineering</span> Student at Holberton School.<br>And a
 			<span>Mechatronics Engineering</span> Student at Alexandria Higher Institute of Engineering and Technology.
 		</p>
