--- a/html/index.html
+++ b/html/index.html
@@ -47,10 +47,10 @@
 <!--		<h3>Lorem ipsum dolor sit amet, non elit.</h3>-->
 		<p>Just feel free to send me an email.</p>
 		<a class="mail" href="mailto:name@email.com">CONTACT ME</a>
-<!--		<a class="social-link" href="https://www.linkedin.com/">LinkedIn</a>-->
-<!--		<a class="social-link" href="https://twitter.com/">Twitter</a>-->
-<!--		<a class="social-link" href="https://www.appbrewery.co/">Website</a>-->
-<!--		<p><span>©</span> Philopatear Abdelfady</p>-->
+		<a class="social-link" href="https://www.linkedin.com/">LinkedIn</a>
+		<a class="social-link" href="https://twitter.com/">Twitter</a>
+		<a class="social-link" href="https://www.appbrewery.co/">Website</a>
+		<p><span>©</span> Philopatear Abdelfady</p>
 <!--		<div class="bottom-container">-->
 <!--			<a class="social-link" href="https://www.linkedin.com/">LinkedIn</a>-->
 <!--			<a class="social-link" href="https://twitter.com/">Twitter</a>-->
@@ -65,11 +65,11 @@
 <!--		<p><span>©</span> Philopatear Abdelfady</p>-->
 <!--	</div>-->
 </div>
-<div class="bottom-container">
-	<a class="social-link" href="https://www.linkedin.com/">LinkedIn</a>
-	<a class="social-link" href="https://twitter.com/">Twitter</a>
-	<a class="social-link" href="https://www.appbrewery.co/">Website</a>
-	<p class="philopatear-abdelmaseh"><span class="at">©</span> Philopatear Abdelfady</p>
-</div>
+<!--<div class="bottom-container">-->
+<!--	<a class="social-link" href="https://www.linkedin.com/">LinkedIn</a>-->
+<!--	<a class="social-link" href="https://twitter.com/">Twitter</a>-->
+<!--	<a class="social-link" href="https://www.appbrewery.co/">Website</a>-->
+<!--	<p><span>©</span> Philopatear Abdelfady</p>-->
+<!--</div>-->
 </body>
 </html>
