edit index.html file v00035

--- a/html/index.html
+++ b/html/index.html
@@ -35,8 +35,11 @@
 		<a class="social-link" href="https://www.linkedin.com/">LinkedIn</a>
 		<a class="social-link" href="https://twitter.com/">Twitter</a>
 		<a class="social-link" href="https://www.appbrewery.co/">Website</a>
-		<p><span>©</span> Philopatear Abdelfady</p>
+<!--		<p><span>©</span> Philopatear Abdelfady</p>-->
 	</div>
+</div>
+<div class="bottom-container">
+	<p class="philopatear-abdelfady"><span>©</span> Philopatear Abdelfady</p>
 </div>
 </body>
 </html>
